k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: task-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-tracker
  template:
    metadata:
      labels:
        app: task-tracker
    spec:
      containers:
        - name: api
          image: task-tracker:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: task-tracker
spec:
  selector:
    app: task-tracker
  ports:
    - port: 80
      targetPort: 8000
